<resources>
    <string name="app_name">Atividades Complementares</string>
    <string name="error_task_not_found">Atividade não encontrada</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_new_task">Nova atividade</string>
    <string name="action_info">Info</string>
    <string name="hint_search">Procurar por atividade</string>
    <string name="about_title">Atividades Complementares</string>
    <string name="about_message">Desenvolvido por Levi Freire</string>
    <string name="about_button_site">Site</string>
    <string name="form_label_title">Título</string>
    <string name="data">Data</string>
    <string name="time">Hora</string>
    <string name="local">Local</string>
    <string name="description">Descrição</string>
    <string name="workload">Carga horária</string>
    <string name="error_invalid_task">Preencha todos os campos corretamente</string>
    <string name="action_delete">Excluir</string>
    <string name="undo">Desfazer</string>
    <string name="fab_new_task">Botão de adicionar nova atividade</string>
    <string name="action_share">Compartilhar</string>
    <string name="share_text">Eu estou usando o App Atividades Complementares para me organizar melhor na faculdade. Experimente você também. É grátis! https://play.google.com/store</string>
    <plurals name="message_tasks_deleted">
        <item quantity="one">1 item excluído</item>
        <item quantity="other">%d itens excluídos</item>
    </plurals>
    <plurals name="list_task_selected">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
</resources>